@@ -1,1 +1,1 @@
-Release 1.2.0
+Release 1.2.1
