@@ -1,3 +1,3 @@
-#define IvtoolsVersion 1.2.0
-#define VersionString "1.2.0"
-#define ReleaseString "ivtools-1.2.0"
+#define IvtoolsVersion 1.2.1
+#define VersionString "1.2.1"
+#define ReleaseString "ivtools-1.2.1"
